Prevent overflow rows

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -81,6 +81,11 @@
 .logRow-loading,
 .logRow-errorMessage {
     padding-left: 22px;
+    width:calc(100% - 22px);
+}
+
+.logGroupLabel{
+	width:calc(100% - 22px);
 }
 
 .logCounter[count] {
